--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "okta-jwt-verifier"
 version = "0.1.0"
 authors = ["Christian Haynes <06chaynes@gmail.com>"]
+repository = "https://gitlab.com/06chaynes/okta-jwt-verifier.git"
+readme = "README.md"
+license = "MIT OR Apache-2.0"
 edition = "2018"
 
 [dependencies]
