added homepage to manifest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ description = "A helper library for working with JWT's for Okta in Rust"
 version = "0.1.0"
 authors = ["Christian Haynes <06chaynes@gmail.com>"]
 repository = "https://gitlab.com/06chaynes/okta-jwt-verifier.git"
+homepage = "https://gitlab.com/06chaynes/okta-jwt-verifier"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 edition = "2018"
