--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ thiserror = "1.0"
 
 [dev-dependencies]
 async-std = { version = "1.9", features = ["attributes"]}
+async-trait = "0.1"
+serde_json = "1.0"
+tide = "0.16"
+tide-http-auth = "0.4"
