--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,20 @@
 [package]
 name = "okta-jwt-verifier"
 description = "A helper library for working with JWT's for Okta in Rust"
-version = "0.1.2"
+version = "0.2.0"
 authors = ["Christian Haynes <06chaynes@gmail.com>"]
 repository = "https://gitlab.com/06chaynes/okta-jwt-verifier.git"
 homepage = "https://gitlab.com/06chaynes/okta-jwt-verifier"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
 dotenv = "0.15"
 jsonwebkey = { version = "0.3", features = ["jwt-convert"]}
 jsonwebtoken = "7.2"
+regex = "1.5"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 surf = "2.3"
