--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ thiserror = "1.0"
 [dev-dependencies]
 async-std = { version = "1.10", features = ["attributes"]}
 async-trait = "0.1"
+redis = "0.21"
 serde_json = "1.0"
 tide = "0.16"
 tide-http-auth = "0.5"
+jsonwebkey = "0.3"
+jsonwebtoken = "7.2"
