--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,21 @@ repository = "https://gitlab.com/06chaynes/okta-jwt-verifier.git"
 homepage = "https://gitlab.com/06chaynes/okta-jwt-verifier"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
-edition = "2021"
+keywords = ["okta", "jwt"]
+categories = [
+    "web-programming"
+]
+edition = "2018"
 
 [dependencies]
 anyhow = "1.0"
 dotenv = "0.15"
 jsonwebkey = { version = "0.3", features = ["jwt-convert"]}
 jsonwebtoken = "7.2"
-regex = "1.5"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 surf = "2.3"
+surf-middleware-cache = { version = "0.1", optional = true }
 thiserror = "1.0"
 
 [dev-dependencies]
@@ -29,3 +33,7 @@ tide = "0.16"
 tide-http-auth = "0.5"
 jsonwebkey = "0.3"
 jsonwebtoken = "7.2"
+
+[features]
+default = []
+disk-cache = ["surf-middleware-cache"]
