--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A helper library for working with JWT's for Okta in Rust"
 version = "0.4.0"
 authors = ["Christian Haynes <06chaynes@gmail.com>"]
 repository = "https://gitlab.com/06chaynes/okta-jwt-verifier.git"
-homepage = "https://gitlab.com/06chaynes/okta-jwt-verifier"
+homepage = "https://docs.rs/okta-jwt-verifier"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 keywords = ["okta", "jwt"]
