--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "okta-jwt-verifier"
 description = "A helper library for working with JWT's for Okta in Rust"
 version = "0.4.0"
 authors = ["Christian Haynes <06chaynes@gmail.com>"]
-repository = "https://gitlab.com/06chaynes/okta-jwt-verifier.git"
+repository = "https://github.com/06chaynes/okta-jwt-verifier.git"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 keywords = ["okta", "jwt"]
