--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ rust-version = "1.60.0"
 [dependencies]
 anyhow = "1.0.69"
 jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
-jsonwebtoken = "8.2.0"
+jsonwebtoken = "^8.2.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.92"
 surf = "2.3.2"
