--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "okta-jwt-verifier"
 description = "A helper library for working with JWT's for Okta in Rust"
-version = "0.6.2"
+version = "0.7.0"
 authors = ["Christian Haynes <06chaynes@gmail.com>"]
 repository = "https://github.com/06chaynes/okta-jwt-verifier.git"
 readme = "README.md"
@@ -11,25 +11,32 @@ categories = [
     "web-programming"
 ]
 edition = "2021"
-rust-version = "1.63.0"
+rust-version = "1.65.0"
 
 [dependencies]
 anyhow = "1.0.72"
 jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
 jsonwebtoken = "8.3.0"
-serde = { version = "1.0.171", features = ["derive"] }
-serde_json = "1.0.103"
-surf = "2.3.2"
-http-cache-surf = { version = "0.11.0", optional = true }
+serde = { version = "1.0.178", features = ["derive"] }
+serde_json = "1.0.104"
+surf = { version = "2.3.2", optional = true }
+reqwest = { version = "0.11.18", optional = true }
+reqwest-middleware = { version = "0.2.2", optional = true }
+http-cache-surf = { version = "0.11.2", optional = true }
+http-cache-reqwest = { version = "0.11.1", optional = true }
 
 [dev-dependencies]
-async-trait = "0.1.71"
+async-trait = "0.1.72"
 async-std = { version = "1.12.0", features = ["attributes"] }
 jwt-simple = "0.11.6"
 mockito = "1.1.0"
 tide = "0.16.0"
 tide-http-auth = "0.5.0"
+tokio = { version = "1.29.1", features = [ "macros", "rt", "rt-multi-thread" ] }
 
 [features]
-default = []
-disk-cache = ["http-cache-surf"]
+default = ["client-surf"]
+client-surf = ["surf"]
+client-reqwest = ["reqwest", "reqwest-middleware"]
+cache-surf = ["http-cache-surf"]
+cache-reqwest = ["http-cache-reqwest"]
