--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "okta-jwt-verifier"
 description = "A helper library for working with JWT's for Okta in Rust"
-version = "0.7.0"
+version = "0.8.0"
 authors = ["Christian Haynes <06chaynes@gmail.com>"]
 repository = "https://github.com/06chaynes/okta-jwt-verifier.git"
 readme = "README.md"
@@ -11,28 +11,27 @@ categories = [
     "web-programming"
 ]
 edition = "2021"
-rust-version = "1.65.0"
+rust-version = "1.73.0"
 
 [dependencies]
 anyhow = "1.0.72"
-jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
-jsonwebtoken = "8.3.0"
+jsonwebtoken = "9.3.0"
 serde = { version = "1.0.178", features = ["derive"] }
 serde_json = "1.0.104"
 surf = { version = "2.3.2", optional = true }
-reqwest = { version = "0.11.18", optional = true }
-reqwest-middleware = { version = "0.2.2", optional = true }
-http-cache-surf = { version = "0.11.2", optional = true }
-http-cache-reqwest = { version = "0.11.1", optional = true }
+reqwest = { version = "0.12.8", features = ["json"], optional = true }
+reqwest-middleware = { version = "0.3.3", optional = true }
+http-cache-surf = { version = "0.13.0", optional = true }
+http-cache-reqwest = { version = "0.14.0", optional = true }
 
 [dev-dependencies]
 async-trait = "0.1.72"
 async-std = { version = "1.12.0", features = ["attributes"] }
-jwt-simple = "0.11.6"
-mockito = "1.1.0"
+jwt-simple = "0.12.10"
+mockito = "1.5.0"
 tide = "0.16.0"
 tide-http-auth = "0.5.0"
-tokio = { version = "1.29.1", features = [ "macros", "rt", "rt-multi-thread" ] }
+tokio = { version = "1.40.0", features = [ "macros", "rt", "rt-multi-thread" ] }
 
 [features]
 default = ["client-surf"]
