--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,14 +15,8 @@ concurrency:
 
 jobs:
   test_library:
-    name: Test library on ${{ matrix.os }}
-    strategy:
-      matrix:
-        os:
-          - ubuntu-latest
-          - windows-latest
-          - macOS-latest
-    runs-on: ${{ matrix.os }}
+    name: Test library
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -40,6 +34,9 @@ jobs:
           shared-key: ${{ runner.os }}
           cache-directories: "~/.npm"
           cache-all-crates: true
+
+      - name: Install libssl-dev
+        run: sudo apt install -y libssl-dev
 
       - name: Check formatting
         run: cargo fmt -- --check
