running only reqwest test

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,7 +32,6 @@ jobs:
         with:
           prefix-key: ${{ github.ref_name }}
           shared-key: ${{ runner.os }}
-          cache-directories: "~/.npm"
           cache-all-crates: true
 
       - name: Check formatting
@@ -47,10 +46,10 @@ jobs:
 
       - name: Run cargo test
         run: |
-          cargo test --all-targets
-          cargo test --all-targets --features cache-surf
+          # cargo test --all-targets
+          # cargo test --all-targets --features cache-surf
           cargo test --all-targets --no-default-features --features client-reqwest
-          cargo test --all-targets --no-default-features --features client-reqwest,cache-reqwest
+          # cargo test --all-targets --no-default-features --features client-reqwest,cache-reqwest
 
       - name: Build docs
         run: cargo +nightly doc --no-deps --document-private-items
