--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install OpenSSL
+        run: sudo apt-get install -y pkg-config libssl-dev
+
       - name: Setup rust stable
         run: rustup toolchain install stable --profile minimal --no-self-update
 
