--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,13 +16,10 @@ concurrency:
 jobs:
   test_library:
     name: Test library
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Install OpenSSL
-        run: sudo apt-get install -y pkg-config libssl-dev
 
       - name: Setup rust stable
         run: rustup toolchain install stable --profile minimal --no-self-update
