--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ http-cache-reqwest = { version = "0.14.0", optional = true }
 [dev-dependencies]
 async-trait = "0.1.72"
 async-std = { version = "1.12.0", features = ["attributes"] }
-jwt-simple = { version = "0.12.10", default-features = false, features = ["pure-rust"] }"
+jwt-simple = { version = "0.12.10", default-features = false, features = ["pure-rust"] }
 mockito = "1.5.0"
 tide = "0.16.0"
 tide-http-auth = "0.5.0"
