--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,10 @@ concurrency:
 jobs:
   test_library:
     name: Test library
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,8 +34,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           prefix-key: ${{ github.ref_name }}
-          shared-key: ${{ runner.os }}
-          cache-directories: "~/.npm"
+          shared-key: ${{ matrix.os }}
           cache-all-crates: true
 
       - name: Check formatting
