--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,16 +43,16 @@ jobs:
       - name: Check clippy
         run: |
           cargo clippy --lib --tests --all-targets -- -D warnings
-          cargo clippy --lib --tests --all-targets --features cache-surf -- -D warnings
-          cargo clippy --lib --tests --all-targets --no-default-features --features client-reqwest -- -D warnings
-          cargo clippy --lib --tests --all-targets --no-default-features --features client-reqwest,cache-reqwest -- -D warnings
+          cargo clippy --lib --tests --all-targets --features cache-reqwest -- -D warnings
+          cargo clippy --lib --tests --all-targets --no-default-features --features client-surf -- -D warnings
+          cargo clippy --lib --tests --all-targets --no-default-features --features client-surf,cache-surf -- -D warnings
 
       - name: Run cargo test
         run: |
           cargo test --all-targets
-          cargo test --all-targets --features cache-surf
-          cargo test --all-targets --no-default-features --features client-reqwest
-          cargo test --all-targets --no-default-features --features client-reqwest,cache-reqwest
+          cargo test --all-targets --features cache-reqwest
+          cargo test --all-targets --no-default-features --features client-surf
+          cargo test --all-targets --no-default-features --features client-surf,cache-surf
 
       - name: Build docs
         run: cargo +nightly doc --no-deps --document-private-items
