--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,6 +31,7 @@ jobs:
         run: rustup toolchain install nightly --profile minimal --no-self-update
 
       - name: Initialize cache
+        if: matrix.os != 'windows-latest'
         uses: Swatinem/rust-cache@v2
         with:
           prefix-key: ${{ github.ref_name }}
@@ -55,6 +56,7 @@ jobs:
           cargo test --all-targets --no-default-features --features client-surf,cache-surf
 
       - name: Build docs
+        if: matrix.os != 'windows-latest'
         run: cargo +nightly doc --no-deps --document-private-items
         env:
           RUSTFLAGS: --cfg docsrs
