--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,6 +28,7 @@ jobs:
         run: rustup toolchain install stable --profile minimal --no-self-update
 
       - name: Setup rust nightly
+        if: matrix.os == 'ubuntu-latest'
         run: rustup toolchain install nightly --profile minimal --no-self-update
 
       - name: Initialize cache
@@ -39,9 +40,11 @@ jobs:
           cache-all-crates: true
 
       - name: Check formatting
+        if: matrix.os == 'ubuntu-latest'
         run: cargo fmt -- --check
 
       - name: Check clippy
+        if: matrix.os == 'ubuntu-latest'
         run: |
           cargo clippy --lib --tests --all-targets -- -D warnings
           cargo clippy --lib --tests --all-targets --features cache-reqwest -- -D warnings
@@ -56,7 +59,7 @@ jobs:
           cargo test --all-targets --no-default-features --features client-surf,cache-surf
 
       - name: Build docs
-        if: matrix.os != 'windows-latest'
+        if: matrix.os == 'ubuntu-latest'
         run: cargo +nightly doc --no-deps --document-private-items
         env:
           RUSTFLAGS: --cfg docsrs
